src/objects/ExternalSystemField__c.object
<CustomObject>
    <fields>
        <fullName>DataCleanupRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Cleanup Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalSystemFieldNotes__c</fullName>
        <label>External System Field Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalSystemInterface__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Interface</label>
        <referenceTo>ExternalSystemInterface__c</referenceTo>
        <relationshipLabel>External System Fields</relationshipLabel>
        <relationshipName>ExternalSystemFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalSystem__c</fullName>
        <label>External System</label>
        <referenceTo>ExternalSystem__c</referenceTo>
        <relationshipName>FieldDependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Closed&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMappedToField__c</fullName>
        <formula>MappedField__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mapped To Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMappedToSObject__c</fullName>
        <formula>MappedSObject__c != null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Mapped To Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MappedField__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mapped Field</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetadataField__c.MetadataSObject__c</field>
                <operation>equals</operation>
                <valueField>$Source.MappedSObject__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MetadataField__c</referenceTo>
        <relationshipLabel>External System Fields</relationshipLabel>
        <relationshipName>ExternalSystemDependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MappedSObject__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Mapped Object</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetadataSObject__c.IsInScope__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>MetadataSObject__c</referenceTo>
        <relationshipLabel>External System Fields</relationshipLabel>
        <relationshipName>ExternalSystemFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MappingNotes__c</fullName>
        <label>Mapping Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequiredForMigration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required For Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceEntity__c</fullName>
        <label>Source Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceField__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceLibrary__c</fullName>
        <label>Source Library</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IF(
    SourceLibrary__c != null,
    SourceLibrary__c + &apos;.&apos;,
    &apos;&apos;
)
+
IF(
    SourceEntity__c != null,
    SourceEntity__c + &apos;.&apos;,
    &apos;&apos;
)
+
SourceField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>External System Field</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ExternalSystem__c</columns>
        <columns>Source__c</columns>
        <columns>Status__c</columns>
        <columns>MappedSObject__c</columns>
        <columns>MappedField__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDataMigrationFields</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>Source__c</columns>
        <columns>DataType__c</columns>
        <columns>MappedSObject__c</columns>
        <columns>MappedField__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemField__c.DataMigrationField</value>
        </filters>
        <label>All Data Migration Fields</label>
    </listViews>
    <listViews>
        <fullName>AllInScope</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Source__c</columns>
        <columns>MappedField__c</columns>
        <columns>MappedSObject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope</label>
    </listViews>
    <listViews>
        <fullName>AllInScopeDataMigrationFields</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>DataType__c</columns>
        <columns>MappedSObject__c</columns>
        <columns>MappedField__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemField__c.DataMigrationField</value>
        </filters>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope Data Migration Fields</label>
    </listViews>
    <listViews>
        <fullName>AllInScopeInterfaceFields</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>ExternalSystemInterface__c</columns>
        <columns>Source__c</columns>
        <columns>DataType__c</columns>
        <columns>Status__c</columns>
        <columns>MappedSObject__c</columns>
        <columns>MappedField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemField__c.InterfaceField</value>
        </filters>
        <filters>
            <field>IsInScope__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All In Scope Interface Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllInterfaceFields</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>ExternalSystemInterface__c</columns>
        <columns>Source__c</columns>
        <columns>DataType__c</columns>
        <columns>Status__c</columns>
        <columns>MappedSObject__c</columns>
        <columns>MappedField__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ExternalSystemField__c.InterfaceField</value>
        </filters>
        <label>All Interface Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllMapped</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>Source__c</columns>
        <columns>MappedField__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsMappedToField__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Mapped</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>ExternalSystem__c</columns>
        <columns>Source__c</columns>
        <columns>MappedField__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <nameField>
        <displayFormat>ExtField-{00000}</displayFormat>
        <label>External Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External System Fields</pluralLabel>
    <recordTypes>
        <fullName>DataMigrationField</fullName>
        <active>true</active>
        <label>Data Migration Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>InterfaceField</fullName>
        <active>true</active>
        <label>Interface Field</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>MappedFieldNotDone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Done&apos;),
    MappedField__c != null,
    NOT(ISPICKVAL(MappedField__r.Status__c, &apos;Done&apos;))
)</errorConditionFormula>
        <errorDisplayField>MappedField__c</errorDisplayField>
        <errorMessage>External System Field cannot be marked as done until the mapped field is marked as done</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MappedFieldRequiredWhenDone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;Done&apos;),
    MappedField__c = null
)</errorConditionFormula>
        <errorDisplayField>MappedField__c</errorDisplayField>
        <errorMessage>Mapped field is required to mark this as done</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MappedSObjectRequiredWhenInReview</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &apos;In Review&apos;),
    MappedSObject__c = null
)</errorConditionFormula>
        <errorDisplayField>MappedSObject__c</errorDisplayField>
        <errorMessage>Mapped Object is required for status = &apos;In Review&apos;</errorMessage>
    </validationRules>
</CustomObject>